# cel-go

./: .bazeliskrc  .bazelrc  .gitignore  .travis.yml  BUILD  BUILD.bazel  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  MODULE.bazel  PULL_REQUEST_TEMPLATE.md  README.md  WORKSPACE  builtins.patch  cloudbuild.yaml  go.mod  go.sum  mockup.html  repositories.bzl  start.sh  t.sh  test.html  tests.xml  type_collision_fix.diff  zip.sh  zip2.sh  zip_log.sh
ast/: BUILD.bazel  base.go  call.go  comprehension.go  constants.go  debug.go  error.go  expression.go  ident.go  list.go  message.go  select.go  struct.go
cel/: cel.go  (+32 more)
cel/testdata/: BUILD.bazel  basic.prompt.md  basic.prompt.txt  field_paths.prompt.txt  macros.prompt.md  macros.prompt.txt  mutant.proto  standard_env.prompt.md  standard_env.prompt.txt  team.fds  team.proto
checker/: BUILD.bazel  checker.go  checker_test.go  cost.go  cost_test.go  env.go  env_test.go  errors.go  format.go  format_test.go  mapping.go  naming.go  options.go  printer.go  scopes.go  standard.go  typeProvider.go  types.go
checker/decls/: BUILD.bazel  decls.go  scopes.go
checker/types/: BUILD.bazel  mapping.go  typeProvider.go  types.go
codelab/: BUILD.bazel  README.md  codelab.go  go.mod  go.sum
codelab/final_state/: codelab.go
codelab/initial_state/: codelab.go
codelab/solution/: codelab.go
common/: BUILD  BUILD.bazel  doc.go  doc_test.go  error.go  errors.go  errors_test.go  location.go  snippeter.go  source.go  source_test.go
common/ast/: BUILD.bazel  ast.go  ast_test.go  conversion.go  conversion_test.go  depth.go  expr.go  expr_test.go  factory.go  navigable.go  navigable_test.go
common/containers/: BUILD.bazel  container.go  container_test.go
common/debug/: BUILD.bazel  debug.go
common/decls/: BUILD.bazel  decls.go  decls_test.go  types.go  types_test.go
common/env/: BUILD.bazel  env.go  env_test.go  io.go  io_test.go
common/functions/: BUILD.bazel  functions.go
common/operators/: BUILD.bazel  operators.go
common/overloads/: BUILD.bazel  overloads.go
common/runes/: BUILD.bazel  buffer.go  buffer_test.go
common/stdlib/: standard.go
common/types/: BUILD.bazel  any_value.go  bool.go  bool_test.go  bytes.go  bytes_test.go  compare.go  compare_test.go  double.go  double_test.go  duration.go  duration_test.go  dyn.go  err.go  format.go  int.go  int_test.go  iterator.go  json_list.go  json_list_test.go  json_struct.go  json_struct_test.go  json_value.go  list.go  list_test.go  map.go  map_test.go  null.go  null_test.go  object.go  object_test.go  optional.go  optional_test.go  overflow.go  provider.go  provider_test.go  providers_test.go  string.go  string_test.go  timestamp.go  (+11 more)
conformance/: BUILD.bazel  conformance_test.bzl  conformance_test.go  go.mod  go.sum  zip.sh
conformance/policy/: BUILD.bazel  cel_policy_conformance_test.bzl  policy_conformance_test.go
interpreter/: BUILD.bazel  activation.go  activation_test.go  astwalker.go  async.go  async_test.go  attribute_patterns.go  attribute_patterns_test.go  attributes.go  attributes_test.go  context.go  decorators.go  dispatcher.go  dispatcher_test.go  evalstate.go  evalstate_test.go  frame.go  frame_test.go  instructions.go  interpretable.go  interpreter.go  interpreter_test.go  late_binding.go  late_binding_old.go  late_binding_old_test.go  late_binding_test.go  metadata.go  optimizations.go  planner.go  program.go  program_test.go  prune.go  prune_test.go  resolver.go  resolver_test.go  runtimeCoster.go  runtimecost.go  runtimecost_test.go
interpreter/functions/: BUILD.bazel  functions.go  standard.go
interpreter/testing/: BUILD.bazel  testing.go
interpreter/types/: BUILD.bazel  adapters.go  adapters_test.go  list.go  list_test.go  map.go  map_test.go  object.go  object_test.go  provider.go  provider_test.go  types.go  types_test.go
io/: BUILD  BUILD.bazel  serializer.go
parser/: BUILD  BUILD.bazel  errors.go  helper.go  helper_test.go  input.go  macro.go  macro_test.go  options.go  parser.go  parser_test.go  unescape.go  unescape_test.go  unparser.go  unparser_test.go
policy/: BUILD.bazel  README.md  compiler.go  compiler_test.go  composer.go  composer_test.go  config.go  config_test.go  conformance.go  go.mod  go.sum  helper_test.go  parser.go  parser_test.go  source.go  test.go  test_tag_handler_k8s.go  yaml.go  yaml_test.go
policy/test/: BUILD.bazel  cel_test_runner.go  k8s_cel_test_runner.go
policy/testdata/: README.md  required_labels.yaml
repl/: BUILD.bazel  README.md  commands.go  commands_test.go  evaluator.go  evaluator_test.go  go.mod  go.sum  repl.go  typefmt.go  typefmt_test.go
repl/appengine/: .gcloudignore  README.md  api.go  api_test.go  app.go  app.yaml  go.mod  go.sum  tsconfig.json
repl/main/: BUILD.bazel  README.md  main.go
repl/parser/: BUILD.bazel  Commands.g4  Commands.interp  Commands.tokens  CommandsLexer.interp  CommandsLexer.tokens  Types.g4  Types.interp  commands_base_listener.go  commands_base_visitor.go  commands_lexer.go  commands_listener.go  commands_parser.go  commands_test.go  commands_visitor.go  regen.sh  types_base_listener.go  types_base_visitor.go  types_lexer.go  types_listener.go  types_parser.go  types_visitor.go
repl/testdata/: attribute_context_fds.textproto  multiline_test_env.yaml  test_env.yaml
semantics/: BUILD.bazel  declaration.go  function.go  ident.go  reference.go  semantics.go
semantics/types/: BUILD.bazel  dynamicType.go  errorType.go  functionType.go  listType.go  mapType.go  messageType.go  nullType.go  primitiveType.go  type.go  typeParameter.go  typeType.go  wellKnownType.go  wrapperType.go
server/: BUILD.bazel  go.mod  go.sum  main.go  server.go  server_test.go
server/agent/: BUILD.bazel  agent.go
server/main/: BUILD.bazel  main.go
test/: BUILD  BUILD.bazel  async.go  cel_go_test.bzl  compare.go  expr.go  integration_test.go  protos.md  suite.go  test_all_types.pb.go  test_all_types.proto
test/bench/: BUILD.bazel  bench.go  bench_test.go
test/proto2pb/: BUILD.bazel  test_all_types.pb.go  test_all_types.proto  test_extensions.pb.go  test_extensions.proto
(+309 files in other folders)
