module(
    name = "cel-go",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "gazelle",
    version = "0.36.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20240819-fe8ba054a",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "protobuf",
    version = "26.0",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_go",
    version = "0.49.0",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "rules_proto",
    version = "6.0.0",
)

switched_rules = use_extension("@com_google_googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    go = True,
)
use_repo(switched_rules, "com_google_googleapis_imports")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_default_attributes(
    directives = [
        "gazelle:proto disable_global",
    ],
)
go_deps.gazelle_override(
    # Force Gazelle to wipe out the existing build files before regenerate them.
    build_file_generation = "on",
    directives = [
        "gazelle:resolve proto go google/api/expr/v1alpha1/syntax.proto @org_golang_google_genproto_googleapis_api//expr/v1alpha1",
        "gazelle:resolve proto proto google/api/expr/v1alpha1/syntax.proto @com_google_googleapis//google/api/expr/v1alpha1:syntax_proto",
    ],
    path = "cel.dev/expr",
)
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module(
    path = "cel.dev/expr",
    sum = "h1:ZM6IQenopt1QQMYYXpqeHn7R9iKWyyC/9kAp9ifXOCI=",
    version = "v0.17.0",
)
go_deps.module(
    path = "gopkg.in/yaml.v3",
    sum = "h1:fxVm/GzAzEWqLHuvctI91KS9hhNmmWOoWu0XTYJS7CA=",
    version = "v3.0.1",
)
go_deps.module(
    path = "github.com/chzyer/readline",
    sum = "h1:upd/6fQk4src78LMRzh5vItIt361/o4uq553V8B5sGI=",
    version = "v1.5.1",
)
go_deps.module(
    path = "github.com/google/go-cmp",
    sum = "h1:O2Tfq5qg4qc4AmwVlvv0oLiVAGB7enBSJ2x2DqQFi38=",
    version = "v0.5.9",
)
use_repo(
    go_deps,
    "com_github_antlr4_go_antlr_v4",
    "com_github_chzyer_readline",
    "com_github_google_go_cmp",
    "com_github_stoewer_go_strcase",
    "dev_cel_expr",
    "in_gopkg_yaml_v3",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_protobuf",
    "org_golang_x_text",
)
