module(
    name = "cel-go",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "gazelle",
    version = "0.44.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20241220-5e258e33.bcr.1",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "googleapis-go",
    version = "1.0.0",
)
bazel_dep(
    name = "protobuf",
    version = "27.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_go",
    version = "0.57.0",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "rules_proto",
    version = "7.0.2",
)

# local_path_override(
#     module_name = "cel-spec",
#     path = "../cel-spec",
# )
bazel_dep(
    name = "cel-spec",
    version = "0.25.1",
    repo_name = "dev_cel_expr",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_default_attributes(
    directives = [
        "gazelle:proto disable_global",
    ],
)
go_deps.gazelle_override(
    build_file_generation = "off",
    directives = [
        "gazelle:go_generate_proto false",
        # Provide hints to gazelle about how includes and imports map to build targets
        "gazelle:resolve go cel.dev/expr @dev_cel_expr//:expr",
        "gazelle:resolve go cel.dev/expr/conformance @dev_cel_expr//conformance:go_default_library",
        "gazelle:resolve proto go google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status",
        "gazelle:resolve proto proto google/rpc/status.proto @googleapis//google/rpc:status_proto",
    ],
    path = "cel.dev/expr",
)
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module(
    path = "github.com/chzyer/readline",
    sum = "h1:upd/6fQk4src78LMRzh5vItIt361/o4uq553V8B5sGI=",
    version = "v1.5.1",
)
go_deps.module(
    path = "github.com/google/go-cmp",
    sum = "h1:ofyhxvXcZhMsU5ulbFiLKl/XBFqE1GSq7atu8tAmTRI=",
    version = "v0.6.0",
)
use_repo(
    go_deps,
    "com_github_antlr4_go_antlr_v4",
    "com_github_chzyer_readline",
    "com_github_google_go_cmp",
    "com_github_stoewer_go_strcase",
    "in_yaml_go_yaml_v3",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_protobuf",
    "org_golang_x_text",
)
