load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "checker.go",
        "env.go",
        "errors.go",
        "naming.go",
        "printer.go",
        "standard.go",
    ],
    deps = [
        "//common:go_default_library",
        "//debug:go_default_library",
        "//io:checked_proto",
        "//io:syntax_proto",
        "//operators:go_default_library",
        "//overloads:go_default_library",
        "//checker/decls:go_default_library",
        "//checker/types:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
    visibility = ["//visibility:public"],
)


go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "checker_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//parser:go_default_library",
        "//test:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_antlr//runtime/Go/antlr:go_default_library",
    ],
)
