load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "checker.go",
        "env.go",
        "errors.go",
        "mapping.go",
        "naming.go",
        "printer.go",
        "standard.go",
        "types.go",
    ],
    deps = [
        "//common:go_default_library",
        "//common/debug:go_default_library",
        "//common/operators:go_default_library",
        "//common/overloads:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//checker/decls:go_default_library",
        "//io:checked_proto",
        "//io:syntax_proto",
	"//parser:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes/empty:go_default_library",
        "@com_github_golang_protobuf//ptypes/struct:go_default_library",
    ],
    visibility = ["//visibility:public"],
)


go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "checker_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//parser:go_default_library",
        "//test:go_default_library",
        "//common/types/ref:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_antlr//runtime/Go/antlr:go_default_library",
    ],
)
