load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

licenses(["notice"])  # Apache 2.0

go_library(
    name = "go_default_library",
    srcs = [
        "checker.go",
        "env.go",
        "errors.go",
        "mapping.go",
        "printer.go",
        "standard.go",
        "types.go",
    ],
    deps = [
        "//checker/decls:go_default_library",
        "//common:go_default_library",
        "//common/debug:go_default_library",
        "//common/operators:go_default_library",
        "//common/overloads:go_default_library",
        "//common/packages:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//parser:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_google_cel_spec//proto/checked/v1:checked_go_proto",
        "@com_google_cel_spec//proto/v1:syntax_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
    ],
    importpath = "github.com/google/cel-go/checker",
    visibility = ["//visibility:public"],
)


go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "checker_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//common/types/ref:go_default_library",
        "//parser:go_default_library",
        "//test:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_antlr//runtime/Go/antlr:go_default_library",
    ],
)
