load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "error.go",
        "errors.go",
        "location.go",
        "source.go",
    ],
    importpath = "github.com/google/cel-go/common",
    deps = [
        "@com_google_cel_spec//proto/v1:syntax_go_proto",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "errors_test.go",
        "source_test.go",
    ],
    size = "small",
    embed = [
        ":go_default_library",
    ],
    visibility = ["//visibility:public"],
)
