load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "activation.go",
        "astwalker.go",
        "dispatcher.go",
        "evalstate.go",
        "instructions.go",
        "interpreter.go",
        "metadata.go",
        "program.go",
    ],
    deps = [
        "//common:go_default_library",
        "//common/operators:go_default_library",
        "//common/overloads:go_default_library",
        "//interpreter/functions:go_default_library",
        "//interpreter/testing:go_default_library",
        "//interpreter/types:go_default_library",
        "//interpreter/types/providers:go_default_library",
        "//interpreter/types/traits:go_default_library",
        "//io:checked_proto",
        "//io:syntax_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
        "@com_github_golang_protobuf//ptypes/struct:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ]
)

go_test(
    name = "go_default_test",
    srcs = [
        "activation_test.go",
        "dispatcher_test.go",
        "evalstate_test.go",
        "interpreter_test.go",
        "program_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//common/operators:go_default_library",
        "//interpreter/functions:go_default_library",
        "//interpreter/types:go_default_library",
        "//io:syntax_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
        "@com_github_golang_protobuf//ptypes/struct:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ],
)