load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "activation.go",
        "astwalker.go",
        "dispatcher.go",
        "evalstate.go",
        "instructions.go",
        "interpreter.go",
        "metadata.go",
        "program.go",
	      "prune.go",
    ],
      importpath = "github.com/google/cel-go/interpreter",
    deps = [
        "//common:go_default_library",
        "//common/operators:go_default_library",
        "//common/overloads:go_default_library",
        "//common/packages:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//common/types/traits:go_default_library",
        "//interpreter/functions:go_default_library",
        "//io:checked_proto",
        "//io:syntax_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
    ]
)

go_test(
    name = "go_default_test",
    srcs = [
        "activation_test.go",
        "dispatcher_test.go",
        "evalstate_test.go",
        "interpreter_test.go",
        "program_test.go",
	      "prune_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//checker:go_default_library",
        "//common/debug:go_default_library",
        "//common/operators:go_default_library",
        "//common/packages:go_default_library",
        "//common/types:go_default_library",
        "//interpreter/functions:go_default_library",
        "//io:syntax_proto",
        "//parser:go_default_library",
        "//test:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
    ],
)
