load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(
    default_visibility = [
        "//interpreter:__subpackages__",
        "//parser:__subpackages__",
    ],
)

go_proto_library(
    name = "syntax_proto",
    importpath = "github.com/google/cel-spec/proto/v1/syntax",
    proto = "@com_google_cel_spec//proto/v1:syntax_protos",
)

go_library(
    name = "go_default_library",
    srcs = [
        "serializer.go",
    ],
    deps = [
        ":syntax_proto",
        "//ast:go_default_library",
        "//common:go_default_library",
        "@com_github_antlr//runtime/Go/antlr:go_default_library",
    ],
)
