load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(
    default_visibility = [
        "//checker:__subpackages__",
        "//debug:__subpackages__",
        "//interpreter:__subpackages__",
        "//parser:__subpackages__",
        "//semantics:__subpackages__",
      ],
)

go_proto_library(
    name = "syntax_proto",
    importpath = "github.com/google/cel-spec/proto/v1/syntax",
    proto = "@com_google_cel_spec//proto/v1:syntax_protos",
)

