load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "helper.go",
        "macro.go",
        "parser.go",
    ],
    deps = [
        "//io:syntax_proto",
        "//common:go_default_library",
        "//common/operators:go_default_library",
        "//parser/gen:go_default_library",
        "@com_github_antlr//runtime/Go/antlr:go_default_library",
        "@com_github_golang_protobuf//ptypes/struct:go_default_library",
    ],
    visibility = ["//visibility:public"],
)


go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "parser_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//common/debug:go_default_library",
        "//parser/gen:go_default_library",
        "//test:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_antlr//runtime/Go/antlr:go_default_library",
    ],
)
