# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//policy:__subpackages__"],
    licenses = ["notice"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "compiler.go",
        "conformance.go",
        "composer.go",
        "config.go",
        "parser.go",
        "source.go",
        "test_tag_handler_k8s.go",
    ],
    importpath = "github.com/google/cel-go/policy",
    compatible_with = ["//buildenv/target:non_prod"],
    deps = [
        "//cel:go_default_library",
        "//common:go_default_library",
        "//common/ast:go_default_library",
        "//common/containers:go_default_library",
        "//common/decls:go_default_library",
        "//common/operators:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//ext:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "compiler_test.go",
        "config_test.go",
        "helper_test.go",
        "parser_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//cel:go_default_library",
        "//common/types:go_default_library",
        "//interpreter:go_default_library",
        "//common/types/ref:go_default_library",
        "//test/proto3pb:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
    ],
)
